--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>LMFRNet オフライン推論ラボ</title>
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="style.css">
