--- a/index.html
+++ b/index.html
@@ -380,11 +380,16 @@
         <!-- Load Section -->
         <div class="panel p-4 flex gap-2 items-end bg-white">
             <div class="flex-1">
-                <label class="text-xs text-gray-500 block mb-1 font-bold">モデルファイル (.onnx)</label>
-                <input type="text" id="model-path" value="./models_caltech101/lmfrnet.onnx"
-                    placeholder="例: ./models_caltech101/lmfrnet.onnx">
+                <label class="text-xs text-gray-500 block mb-1 font-bold">モデル選択</label>
+                <select id="model-path"
+                    class="w-full bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5">
+                    <option value="./models_caltech101/lmfrnet.onnx" selected>LMFRNet (Default)</option>
+                    <option value="./models_caltech101/lmfrnet_hires.onnx">LMFRNet Hires</option>
+                    <option value="./models_caltech101/mobilenetv3_large.onnx">MobileNetV3 Large</option>
+                    <option value="./models_caltech101/resnet18.onnx">ResNet18</option>
+                </select>
             </div>
-            <button onclick="loadModel()" id="load-btn" class="whitespace-nowrap">モデル読み込み</button>
+            <button onclick="loadModel()" id="load-btn" class="whitespace-nowrap h-[42px]">モデル読み込み</button>
         </div>
 
         <!-- Tabs -->
@@ -543,7 +548,7 @@
         const DEFAULT_MODEL_PATH = "./models_caltech101/lmfrnet.onnx";
         // ラベル定義 (Caltech-101)
         const LABELS = [
-            { en: "background", ja: "背景" }, { en: "Faces", ja: "顔" }, { en: "Faces_easy", ja: "顔(Easy)" },
+            { en: "Faces", ja: "顔" }, { en: "Faces_easy", ja: "顔(Easy)" },
             { en: "Leopards", ja: "ヒョウ" }, { en: "Motorbikes", ja: "バイク" }, { en: "accordion", ja: "アコーディオン" },
             { en: "airplane", ja: "飛行機" }, { en: "anchor", ja: "錨" }, { en: "ant", ja: "アリ" },
             { en: "barrel", ja: "樽" }, { en: "bass", ja: "バス(魚)" }, { en: "beaver", ja: "ビーバー" },
@@ -614,7 +619,6 @@
             renderDatasetGrid();
 
             // Auto load default model
-            if (!modelPathInput.value) modelPathInput.value = DEFAULT_MODEL_PATH;
             await loadModel(true);
         };
 
