--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="robots" content="noindex, nofollow">
     <title>ローカル環境で画像認識精度実験</title>
+    <script>
+        // Force Unregister Service Workers to clear old caches
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.getRegistrations().then(function (registrations) {
+                for (let registration of registrations) {
+                    registration.unregister();
+                }
+            });
+        }
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -529,6 +539,7 @@
         let currentModelName = "";
         let isRunning = false;
 
+
         const statusEl = document.getElementById('model-status');
         const modelSelect = document.getElementById('model-select');
         const benchTableBody = document.getElementById('bench-table-body');
@@ -565,6 +576,7 @@
                 option.textContent = opt.name;
                 modelSelect.appendChild(option);
             });
+            modelSelect.value = MODEL_OPTIONS[0].path;
             modelSelect.addEventListener('change', (e) => {
                 loadModel(e.target.value);
             });
@@ -623,47 +635,45 @@
         }
 
         async function runInference(blob) {
-            // 1. Preprocess (Resize & Get Pixel Data)
-            const imageBitmap = await createImageBitmap(blob);
-            const targetSize = 224;
-            const canvas = document.createElement('canvas');
-            canvas.width = targetSize;
-            canvas.height = targetSize;
-            const ctx = canvas.getContext('2d');
+            const pixelData = await loadAndCenterCrop(blob, 224);
 
-            // Aspect Ratio Preserved Center Crop
-            const scale = Math.max(targetSize / imageBitmap.width, targetSize / imageBitmap.height);
-            const scaledWidth = imageBitmap.width * scale;
-            const scaledHeight = imageBitmap.height * scale;
-            const dx = (targetSize - scaledWidth) / 2;
-            const dy = (targetSize - scaledHeight) / 2;
-
-            ctx.drawImage(imageBitmap, dx, dy, scaledWidth, scaledHeight);
-            const imageData = ctx.getImageData(0, 0, targetSize, targetSize);
-            const pixelData = imageData.data; // Uint8ClampedArray
-
-            // 2. Inference
-            if (workerReady && modelLoadedOnWorker) {
-                return new Promise((resolve, reject) => {
-                    const handler = (e) => {
-                        const { type, result, error } = e.data;
-                        if (type === 'RUN_DONE') {
-                            worker.removeEventListener('message', handler);
-                            resolve(result.probs); // worker returns { probs, time }
-                        } else if (type === 'ERROR') {
-                            worker.removeEventListener('message', handler);
-                            reject(new Error(error));
-                        }
-                    };
-                    worker.addEventListener('message', handler);
-                    worker.postMessage({ type: 'RUN', data: { pixelData } });
-                });
-            } else if (session) {
-                return runInferenceMainThread(pixelData);
-            } else if (useMockInference) {
-                return new Promise(r => setTimeout(() => r(Array(101).fill(0).map((_, i) => i === 0 ? 1 : 0)), 50));
+            if (!session) {
+                throw new Error("Model session not loaded");
             }
-            throw new Error("No inference backend available");
+
+            const start = performance.now();
+            const probs = await runInferenceMainThread(pixelData);
+            const end = performance.now();
+            return { probs, time: end - start };
+        }
+
+        async function loadAndCenterCrop(blob, target) {
+            const url = URL.createObjectURL(blob);
+            try {
+                const img = await new Promise((resolve, reject) => {
+                    const image = new Image();
+                    image.crossOrigin = "anonymous";
+                    image.onload = () => resolve(image);
+                    image.onerror = reject;
+                    image.src = url;
+                });
+
+                const canvas = document.createElement('canvas');
+                canvas.width = target;
+                canvas.height = target;
+                const ctx = canvas.getContext('2d');
+
+                const scale = Math.max(target / img.width, target / img.height);
+                const scaledWidth = img.width * scale;
+                const scaledHeight = img.height * scale;
+                const dx = (target - scaledWidth) / 2;
+                const dy = (target - scaledHeight) / 2;
+
+                ctx.drawImage(img, dx, dy, scaledWidth, scaledHeight);
+                return ctx.getImageData(0, 0, target, target).data;
+            } finally {
+                URL.revokeObjectURL(url);
+            }
         }
 
         async function runInferenceMainThread(pixelData) {
